--- a/app/src/main/res/layout/activity_annotation.xml
+++ b/app/src/main/res/layout/activity_annotation.xml
@@ -5,17 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.testfragment.TestFragmentActivity">
-    <Button
-        android:text="添加"
-        android:id="@+id/btn1"
-        android:onClick="click"
+    tools:context=".view.annotation.AnnotationActivity">
+    <TextView
+        android:id="@+id/tv"
+        android:text="text"
+        android:textSize="28dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
-    <FrameLayout
-        android:id="@+id/fg_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+    <Button
+        android:id="@+id/click"
+        android:text="点击"
+        android:textSize="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
