--- a/app/src/main/res/layout/fragment_linear_layout.xml
+++ b/app/src/main/res/layout/fragment_linear_layout.xml
@@ -12,9 +12,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="linearLayout" />
+    <Button
+        android:text="刷新"
+        android:id="@+id/refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
