--- a/app/src/main/res/layout/activity_vector_drawable.xml
+++ b/app/src/main/res/layout/activity_vector_drawable.xml
@@ -5,6 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.vector.VectorDrawableActivity">
+    <TextView
+        android:id="@+id/tv"
+        android:text="哈哈哈哈哈"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
